Small updates before merging in RSVP.

--- a/src/pages/rsvp/index.astro
+++ b/src/pages/rsvp/index.astro
@@ -132,8 +132,7 @@ if (Astro.request.method === "POST") {
           />
 
           <div class="pt-4 font-normal">
-            <span class="font-bold">Note:</span>&nbsp;Children under 5 are not
-            invited to the Houston ceremony.
+            <span class="font-bold">Note:</span>&nbsp;The Houston ceremony is intended for guests ages 5 and above only.
           </div>
         </div>
       </div>
