--- a/src/pages/travel.astro
+++ b/src/pages/travel.astro
@@ -55,13 +55,15 @@ import { Code } from "astro:components";
             </li>
             <li>
               The Visa application will require an address. Please use the
-              address of Utkarsh's uncle Chandra Pareta.
+              address and phone number of Utkarsh's uncle Chandra Pareta.
               <br />
               <div class="p-4">
                 305 Laxmi Colony <br />
                 Kakraiya Talaiya, Gorakhpur <br />
                 Jabalpur MP 482001 <br />
                 India
+                <br />
+                +91 761-2429050
               </div>
             </li>
           </ol>
