--- a/src/pages/about-us.astro
+++ b/src/pages/about-us.astro
@@ -14,7 +14,7 @@ import Navbar from "../components/Navbar.astro";
         <p>
             The story of Gina and Utkarsh began in 2015 during their senior year of high school in Eagan, Minnesota.
             Though they knew each other prior to then, it wasn't until their final year of high school that they became
-            good friends. As they both prepared to start their college journeys in separate states, they're relationship
+            good friends. As they both prepared to start their college journeys in separate states, their relationship
             continued to grow. Ironically, their relationship only progressed past friendship after they had been separated.
             Despite attending different universities—Gina at University of Wisconsin and Utkarsh at the University of
             Minnesota—they found ways to stay connected, whether it was through texting cute notes, talking every night,
