--- a/src/pages/about-us.astro
+++ b/src/pages/about-us.astro
@@ -40,7 +40,7 @@ import Navbar from "../components/Navbar.astro";
 
         <p>
             If you take a step back and look at their timeline of events, you'd think that someone messed up the dates.
-            Their first date (and the first time they saw each other after starting to date) was't until 2 months after
+            Their first date (and the first time they saw each other after starting to date) wasn't until 2 months after
             they started dating, they bought a house together before they were engaged (also before they had actually
             lived with each other), and, even today, Utkarsh is planning on having his “Bachelor Party” after they get
             married.
