--- a/src/pages/save-the-date.astro
+++ b/src/pages/save-the-date.astro
@@ -28,7 +28,7 @@ import Navbar from "../components/Navbar.astro";
     <h1
       class="absolute bottom-[-12px] left-[calc(50%-11rem)] font-fancy text-6xl text-wedding-cream font-bold text-gradient"
     >
-      Gina <br />&nbsp;&nbsp;&nbsp;&Utkarsh
+      gina <br />&nbsp;&nbsp;&nbsp;&utkarsh
     </h1>
   </div>
   <div
