--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,10 +16,10 @@ const { title } = Astro.props;
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta property="og:title" content="Gina & Utkarsh" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://gina-utkarsh.wedding/opg.png" />
+    <meta property="og:image" content="https://gina-utkarsh.wedding/opg_2.png" />
     <meta property="og:image:type" content="image/png" />
-    <meta property="og:image:width" content="800" />
-    <meta property="og:image:height" content="600" />
+    <meta property="og:image:width" content="959" />
+    <meta property="og:image:height" content="753" />
     <title>{title}</title>
   </head>
   <body class="bg-wedding-cream font-normal">
